--- a/car/lambo/templates/lambo/lambo.html
+++ b/car/lambo/templates/lambo/lambo.html
@@ -7,7 +7,7 @@
     <title>cake</title>
     <style>
         body{
-            background-color: pink;
+            background-color: red;
         }
     </style>
 </head>
