--- a/car/lambo/templates/lambo/lambo.html
+++ b/car/lambo/templates/lambo/lambo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cake</title>
+    <link rel="stylesheet" href="{% static "lambo/css/bootstrap.min.css" %}">
     <style>
         body{
             background-color: red;
@@ -12,7 +13,20 @@
     </style>
 </head>
 <body>
+    <button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
+
+<button type="button" class="btn btn-link">Link</button>
     <h1>HELLO FROM, LAMBORGHINI!</h1>
     <img src="{% static "images/car.jpeg" %}" alt="">
+    <script src="{% static "lambo/js/bootstrap.min.js" %}"> </script>
+    <script src="{% static "lambo/js/popper.js" %}"></script>
+    <script src="{% static "lambo/js/jquery.js" %}"
 </body>
 </html>
