--- a/car/lambo/templates/lambo/lambo.html
+++ b/car/lambo/templates/lambo/lambo.html
@@ -27,6 +27,6 @@
     <img src="{% static "images/car.jpeg" %}" alt="">
     <script src="{% static "lambo/js/bootstrap.min.js" %}"> </script>
     <script src="{% static "lambo/js/popper.js" %}"></script>
-    <script src="{% static "lambo/js/jquery.js" %}"
+    <script src="{% static "lambo/js/jquery.js" %}"></script>
 </body>
 </html>
