--- a/demo/demo/Scripts/firstpro/firstapp/templates/home.html
+++ b/demo/demo/Scripts/firstpro/firstapp/templates/home.html
@@ -1,2 +1,9 @@
 <h1>Home Page!!!</h1>
 <h2><a href="add">AddEmp</a></h2>
+
+
+<h2><a href="elist">EmpList</a></h2>
+
+<h2><a href="acc">AddAccount</a></h2>
+
+<h2><a href="acclist">AccountList</a></h2>
