--- a/demo/demo/Scripts/firstpro/firstapp/templates/emp_list.html
+++ b/demo/demo/Scripts/firstpro/firstapp/templates/emp_list.html
@@ -1,6 +1,6 @@
 <h1>EmpList</h1>
 
-<table>
+<table border=2>
     <tr>
         <th>ID</th>
         <th>NAME</th>
@@ -14,7 +14,8 @@
         <td>{{i.name}}</td>
         <td>{{i.email}}</td>
         <td>{{i.age}}</td>
-        <td>{{i.action}}</td>
+        <td><a href="delete?id={{i.id}}">Delete</a></td>
+        
     </tr>
 
     {% endfor %}
