--- a/demo/demo/Scripts/firstpro/firstapp/templates/home.html
+++ b/demo/demo/Scripts/firstpro/firstapp/templates/home.html
@@ -7,3 +7,5 @@
 <h2><a href="acc">AddAccount</a></h2>
 
 <h2><a href="acclist">AccountList</a></h2>
+<h2><a href="msg">Message_App(by using render function)</a></h2>
+<h2><a href="msg2">Message_App(by using render function)</a></h2>
