--- a/Eproject/Eproject/Scripts/ecompro/eapp/templates/navbar.html
+++ b/Eproject/Eproject/Scripts/ecompro/eapp/templates/navbar.html
@@ -17,9 +17,12 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
+              {%if user.is_authenticated%}
+              <a class="nav-link" href="logout">Logout</a>
+              {%else%}
               <a class="nav-link" href="reg">register</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="login">Login</a>
+              {%endif%}
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </div>
           </div>
