--- a/Eproject/Eproject/Scripts/ecompro/eapp/templates/register.html
+++ b/Eproject/Eproject/Scripts/ecompro/eapp/templates/register.html
@@ -2,7 +2,7 @@
 {% block body %}
 <h1>SignUp</h1>
 <form action=''method='post'>
-    {% csrf_token %}}
+    {% csrf_token %}
     <table class='table'>
         {{form.as_table}}
         <tr>
